# WidgBar

./: README.md  archive  bundle-stats.html  components.json  index.html  package-lock.json  package.json  refactor.py  refactor_dnd.py  refactor_handlers.py  refactor_tabs.py  tab_content.txt  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src copy/: App.css  App.tsx
src copy/assets/: xb_niloofar_typography_portal.html
src copy/components/: AddWidgetModal.tsx  Bar.tsx  Logo.tsx  Main.tsx  WidgetAreaItem.tsx  WidgetBarItem.tsx  WidgetSettingsPanel.tsx  WidgetsArea.tsx
src copy/components/ui/: CutoutModal.tsx  CutoutProvider.tsx  tabs.tsx
src copy/stores/: layoutStore.ts  settingsStore.ts  widgetConstraintsStore.ts  widgetInstanceStore.ts
src copy/types/: layout.ts
src copy/widgets/calendar/: area.tsx  bar.tsx
src copy/widgets/clock/: area.tsx  bar.tsx  setting.tsx
src copy/widgets/todo/: area.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acrylic_layer.rs  audio_control.rs  clipboard_history.rs  database.rs  listener.rs  locked_popups.rs  main.rs  media_control.rs  system_monitor.rs  windows_pool.rs  windows_utils.rs
src-tauri/src - Copy/: acrylic_layer.rs  windows_pool.rs  windows_utils.rs
src/components/: AddWidgetModal.tsx  AddWidgetPanel.tsx  AiChatRoute.tsx  Bar.tsx  BarSettingsTab.tsx  CompanyLogo.tsx  GlobalWidgetSettingsPanel.tsx  LayoutSettings.tsx  Main.tsx  MarkdownChatContent.tsx  Popup.tsx  PrimarySidebar.tsx  SecondarySidebar.tsx  Titlebar.tsx  Tooltip.tsx  Widget.tsx  WidgetAreaItem.tsx  WidgetAreaSettingsTab.tsx  WidgetBarItem.tsx  WidgetIcon.tsx  WidgetSettingsPanel.tsx  WidgetsArea.tsx
src/components/ai/: AttachmentChips.tsx  ChatUserMessage.tsx  SessionComposer.tsx
src/components/tabs/: AddAiServicePanel.tsx  AiServicesTab.tsx  EditAiServicePanel.tsx  HomeTab.tsx  LayoutSettingsTab.tsx
src/components/ui/: CutoutModal.tsx  NumberInput.tsx  SettingCard.tsx  Squircle.tsx  TipCard.tsx  VisualSelector.tsx  button.tsx  input.tsx  select.tsx  slider.tsx  tabs.tsx
src/hooks/: useSquircle.ts
src/lib/: AiServicesManager.ts  TranslateCore.ts  i18n.ts  textFileAttach.ts  widgetIcons.ts
src/stores/: aiServicesStore.ts  clipboardStore.ts  layoutStore.ts  settingsStore.ts  snapStore.ts  widgetConstraintsStore.ts  widgetRegistryStore.ts
src/types/: ai.ts  layout.ts
src/widgets/ai/: Area.tsx  Bar.tsx  BarSetting.tsx  WidgetSetting.tsx  typeSetting.tsx
src/widgets/calendar/: Area.tsx  Bar.tsx  BarSetting.tsx  GeneralSetting.tsx  WidgetSetting.tsx  area.tsx  dateUtils.ts  typeSetting.tsx
src/widgets/clipboard/: Area.tsx  Bar.tsx  BarSetting.tsx  GeneralSetting.tsx  clipboardAi.ts  clipboardApi.ts  typeSetting.tsx
src/widgets/clock/: Area.tsx  Bar.tsx  BarSetting.tsx  Flag.tsx  GeneralSetting.tsx  WidgetSetting.tsx  area.tsx  bar.tsx  setting.tsx  typeSetting.tsx  widgetSetting.tsx
src/widgets/music/: Area.tsx  Bar.tsx  BarSetting.tsx  WidgetSetting.tsx  typeSetting.tsx  useMediaSession.ts
src/widgets/system_monitor/: Area.tsx  Bar.tsx  BarSetting.tsx  GeneralSetting.tsx  WidgetSetting.tsx  typeSetting.tsx
src/widgets/timer/: Area.tsx  Bar.tsx  area.tsx
src/widgets/todo/: Bar.tsx  area.tsx
src/widgets/translate/: Area.tsx  Bar.tsx  GeneralSetting.tsx  TranslateEngineSettingsFields.tsx  fetchModels.ts  languages.ts  translateService.ts  typeSetting.tsx
src/widgets/weather/: Area.tsx  Bar.tsx  BarSetting.tsx  GeneralSetting.tsx  WidgetSetting.tsx  typeSetting.tsx
