[package]
name = "widg-bar"
version = "0.1.0"
description = "Customizable and modular widgets and toolbars for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "widgbarlib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri = { version = "2", features = ["devtools"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-core = "0.62.2"
window-vibrancy = "0.7.1"
tokio = { version = "1", features = ["full"] }
raw-window-handle = "0.6"
once_cell = "1.21.4"
base64 = "0.22"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
windows-numerics = "0.3.1"
windows-win = "3.0.0"
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.30.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Foundation",
    "Foundation_Numerics",
    "Management_Deployment",
    "Media",
    "Media_Control",
    "Storage_Streams",
    "System",
    "UI",
    "UI_Composition",
    "UI_Composition_Desktop",
    "UI_Core",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_UI_Accessibility",
    "Win32_UI_Controls",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }

[patch.crates-io]
tauri = { git = "https://github.com/zetaloop/tauri", branch = "feat/no-redirection-bitmap" }
tauri-build = { git = "https://github.com/zetaloop/tauri", branch = "feat/no-redirection-bitmap" }
tauri-utils = { git = "https://github.com/zetaloop/tauri", branch = "feat/no-redirection-bitmap" }
